# evaluator.rs

./: Cargo.toml  README.md
src/: dummyeval.rs  eval.rs  immeval.rs  lib.rs  rceval.rs  tests.rs  traits.rs
